--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,7 +2,9 @@
     "appName": "VisualTEAF",
     "start": "Start",
     "welcome": "Welcome!",
-    "introText": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Infancy and Environment Research Group (GRIE) of the Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 and PI23/01220), AGAUR (2021-SGR-01290) and Irene Torres Gámez as her Final Degree Project within the framework of the Service Learning Programs 2023/24 at UC3M.\n\n© Visual TEAF 2024",
+    "introText1": "This app is a tool to help healthcare professionals assess the diagnostic criteria for Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (",
+    "introText2": "Hoyme, 2016",
+    "introText3": ").\n\nThis app is developed by VisualTEAF and the Infancy and Environment Research Group (GRIE) of the Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 and PI23/01220), AGAUR (2021-SGR-01290) and Irene Torres Gámez as part of her TFG in the framework of the ApS 2023/24 programs of UC3M.\n\n© Visual TEAF 2024",
     "back": "Back",
     "next": "Next",
     "logIn": "Log In",
