--- a/i18n/es.json
+++ b/i18n/es.json
@@ -2,7 +2,9 @@
     "appName": "VisualTEAF",
     "start": "Comenzar",
     "welcome": "¡Bienvenido/a!",
-    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 y PI23/01220), AGAUR (2021-SGR-01290) e Irene Torres Gámez como su TFG en el marco de los programas ApS 2023/24 de la UC3M.\n\n© Visual TEAF 2024",
+    "introText1": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (",
+    "introText2": "Hoyme, 2016",
+    "introText3":  ").\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 y PI23/01220), AGAUR (2021-SGR-01290) e Irene Torres Gámez como su TFG en el marco de los programas ApS 2023/24 de la UC3M.\n\n© Visual TEAF 2024",
     "back": "Atrás",
     "next": "Siguiente",
     "logIn": "Iniciar sesión",
