--- a/i18n/en.json
+++ b/i18n/en.json
@@ -24,7 +24,7 @@
     "adopted": "Adopted/Fostered?",
     "yes": "Yes",
     "no": "No",
-    "receptionTime": "Reception time",
+    "receptionTime": "Arrival time",
     "less24": "< 24 months",
     "more24": "≥ 24 months",
     "+24": "Less than 24 months",
@@ -66,7 +66,7 @@
     "filtrum": "Philtrum",
     "upper_lip": "Upper lip",
     "cranial_malformations": "Cranial malformations (MRI)",
-    "recurrent_fever": "Recurrent fever",
+    "recurrent_fever": "Afebrile seizures",
     "major_malformations": "Major malformations related to prenatal alcohol exposure?",
     "diagnosis": "Diagnosis",
     "result_info": "Information about the result",
@@ -88,13 +88,15 @@
     "delete": "Delete",
     "error_details": "No details found for the patient",
     "SAF": "FAS",
-    "pFAS": "SAFp",
-    "NOTEAF": "NO TEAF",
+    "pFAS": "pFAS",
+    "NOTEAF": "NO FASD",
     "ARND": "ARND",
     "higher": "Please enter a value greater than 24 months",
     "name": "Name",
     "sure": "Are you sure you want to delete the patient?",
     "pdf_done": "Diagnosis performed by Visual TEAF",
     "pdf_header": "PATIENT DIAGNOSIS",
-    "incomplete": "Incomplete"
+    "incomplete": "Incomplete",
+    "explanation": "Orange = symptom of FASD",
+    "introduce": "Enter a name"
 }
