fix logica sin alcohol

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,109 +1,109 @@
 {
-    "appName": "VisualTEAF",
-    "start": "Start",
-    "welcome": "Welcome!",
-    "introText1": "This app is a tool to help healthcare professionals assess the diagnostic criteria for Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (",
-    "introText2": "Hoyme, 2016",
-    "introText3": ").\n\nThis app is developed by VisualTEAF and the Infancy and Environment Research Group (GRIE) of the Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 and PI23/01220), AGAUR (2021-SGR-01290) and Irene Torres Gámez as part of her TFG in the framework of the ApS 2023/24 programs of UC3M.\n\n© Visual TEAF 2024",
-    "back": "Back",
-    "next": "Next",
-    "logIn": "Log In",
-    "signUp": "Sign Up",
-    "textLogIn": "Welcome to VisualTEAF",
-    "textSignUp": "Register on VisualTEAF",
-    "forgotPassword": "Forgot your password?",
-    "resetPassword": "Reset password",
-    "close": "Close",
-    "startAnalysis": "Start analysis",
-    "patient": "Patients",
-    "evaluation": "Evaluation",
-    "age": "Age",
-    "infoAge": "Information about age",
-    "infoAgeText": "In children under 3 years of age, the neurocognitive assessment refers to whether there is a delay in neurodevelopment according to their age. The behavioral evaluation must be adapted to the chronological age of each child.",
-    "accept": "Accept",
-    "adopted": "Adopted/Fostered?",
-    "yes": "Yes",
-    "no": "No",
-    "receptionTime": "Arrival time",
-    "less24": "< 24 months",
-    "more24": "≥ 24 months",
-    "+24": "Less than 24 months",
-    "-24": "More than 24 months",
-    "domains": "Number of affected domains",
-    "infoDomains": "Information about the domains",
-    "infoDomainsText": "Watch the following video for more information on the affected domains:",
-    "videoDomains": "Vimeo - Affected Domains",
-    "0": "0",
-    "1": "1",
-    "more2": "More than 2",
-    "2": "≥ 2",
-    "alcohol_consume": "Alcohol consumption during pregnancy",
-    "ethnicity": "Ethnicity",
-    "caucasian": "Caucasian",
-    "african": "African American",
-    "gender": "Gender",
-    "male": "Male",
-    "female": "Female",
-    "weight": "Weight",
-    "weight_info": "Information about weight",
-    "watch_weight_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure weight:",
-    "vimeo_weight": "Vimeo - Weight",
-    "height": "Height",
-    "height_info": "Information about height",
-    "watch_height_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure height:",
-    "vimeo_height": "Vimeo - Height",
-    "head_circumference": "Head circumference",
-    "head_circumference_info": "Information about head circumference",
-    "measure_head_circumference": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
-    "vimeo_head_circumference": "Vimeo - Head Circumference",
-    "palpebral_distance": "Palpebral distance",
-    "palpebral_distance_info": "Information about palpebral distance",
-    "watch_palpebral_video": "Watch the following video for more information on how to measure palpebral distance:",
-    "vimeo_palpebral": "Vimeo - Palpebral Distance",
-    "summary": "Summary",
-    "edit": "Edit",
-    "continue": "Continue",
-    "filtrum": "Philtrum",
-    "upper_lip": "Upper lip",
-    "cranial_malformations": "Cranial malformations (MRI)",
-    "recurrent_fever": "Afebrile seizures",
-    "major_malformations": "Major malformations related to prenatal alcohol exposure?",
-    "diagnosis": "Diagnosis",
-    "result_info": "Information about the result",
-    "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
-    "TEAF_courses": "TEAF courses",
-    "save_patient": "Save patient",
-    "back_to_home": "Back to Home",
-    "data_loss_confirmation": "If you return to the Home page, the data entered during the diagnosis will be deleted. Are you sure you want to return to the Home page?",
-    "cancel": "Cancel",
-    "home": "Home",
-    "error": "Error",
-    "alcohol": "Alcohol",
-    "neurobehavioral": "Neurobehavioral",
-    "head_circumference_short": "Head Circumference",
-    "diagnosis_not_available": "Diagnosis not available",
-    "months": "Months",
-    "please": "Please, fill in all fields",
-    "details": "Details",
-    "delete": "Delete",
-    "error_details": "No details found for the patient",
-    "SAF": "FAS",
-    "pFAS": "pFAS",
-    "NOTEAF": "NO FASD",
-    "ARND": "ARND",
-    "higher": "Please enter a value greater than 24 months",
-    "name": "Name",
-    "sure": "Are you sure you want to delete the patient?",
-    "pdf_done": "Diagnosis performed by Visual TEAF",
-    "pdf_header": "PATIENT DIAGNOSIS",
-    "incomplete": "Incomplete",
-    "explanation": "Orange = symptom of FASD",
-    "introduce": "Enter a name",
-    "na": "N/A",
-    "guide": "User Guide",
-    "instructions": "User guide: \n1. Some links to explanatory texts or videos are included: FASD diagnosis algorithm from Hoyme and symbols “?” beside some titles or paragraphs\n2. Figures of values of physical measurements don't admit decimals\n3. The page where the images of lips and filtrum are showed includes an external link\n4. In the page “Diagnosis”:\n\ta. The button “Edit” refers to the beginning of the assessment in progress for reviewing the introduced data\n\tb. The button “Summary” includes all registered data\n\tc. The button “Home” refers to start a new Evaluation\n5. In the page “Summary”:\n\ta. The button with a floppy disk refers to keep the patient (anonimously)\n\tb. The button with an arrow refers to send the summary text to the e-mail\n\tc. The button with a basket eliminates introduced data and refers to the home page of the App",
-    "question0": "Have you been in a foster family where your native language was spoken?",
-    "notEvaluableTitle": "Not evaluable",
-    "notEvaluableMessage": "This user is no evaluable"
-      }
+  "appName": "VisualTEAF",
+  "start": "Start",
+  "welcome": "Welcome!",
+  "introText1": "This app is a tool to help healthcare professionals assess the diagnostic criteria for Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (",
+  "introText2": "Hoyme, 2016",
+  "introText3": ").\n\nThis app is developed by VisualTEAF and the Infancy and Environment Research Group (GRIE) of the Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 and PI23/01220), AGAUR (2021-SGR-01290) and Irene Torres Gámez as part of her TFG in the framework of the ApS 2023/24 programs of UC3M.\n\n© Visual TEAF 2024",
+  "back": "Back",
+  "next": "Next",
+  "logIn": "Log In",
+  "signUp": "Sign Up",
+  "textLogIn": "Welcome to VisualTEAF",
+  "textSignUp": "Register on VisualTEAF",
+  "forgotPassword": "Forgot your password?",
+  "resetPassword": "Reset password",
+  "close": "Close",
+  "startAnalysis": "Start analysis",
+  "patient": "Patients",
+  "evaluation": "Evaluation",
+  "age": "Age",
+  "infoAge": "Information about age",
+  "infoAgeText": "In children under 3 years of age, the neurocognitive assessment refers to whether there is a delay in neurodevelopment according to their age. The behavioral evaluation must be adapted to the chronological age of each child.",
+  "accept": "Accept",
+  "adopted": "Adopted/Fostered?",
+  "yes": "Yes",
+  "no": "No",
+  "receptionTime": "Arrival time",
+  "less24": "< 24 months",
+  "more24": "≥ 24 months",
+  "+24": "Less than 24 months",
+  "-24": "More than 24 months",
+  "domains": "Number of affected domains",
+  "infoDomains": "Information about the domains",
+  "infoDomainsText": "Watch the following video for more information on the affected domains:",
+  "videoDomains": "Vimeo - Affected Domains",
+  "0": "0",
+  "1": "1",
+  "more2": "More than 2",
+  "2": "≥ 2",
+  "alcohol_consume": "Alcohol consumption during pregnancy",
+  "ethnicity": "Ethnicity",
+  "caucasian": "Caucasian",
+  "african": "African American",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "weight": "Weight",
+  "weight_info": "Information about weight",
+  "watch_weight_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure weight:",
+  "vimeo_weight": "Vimeo - Weight",
+  "height": "Height",
+  "height_info": "Information about height",
+  "watch_height_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure height:",
+  "vimeo_height": "Vimeo - Height",
+  "head_circumference": "Head circumference",
+  "head_circumference_info": "Information about head circumference",
+  "measure_head_circumference": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
+  "vimeo_head_circumference": "Vimeo - Head Circumference",
+  "palpebral_distance": "Palpebral distance",
+  "palpebral_distance_info": "Information about palpebral distance",
+  "watch_palpebral_video": "Watch the following video for more information on how to measure palpebral distance:",
+  "vimeo_palpebral": "Vimeo - Palpebral Distance",
+  "summary": "Summary",
+  "edit": "Edit",
+  "continue": "Continue",
+  "filtrum": "Philtrum",
+  "upper_lip": "Upper lip",
+  "cranial_malformations": "Cranial malformations (MRI)",
+  "recurrent_fever": "Afebrile seizures",
+  "major_malformations": "Major malformations related to prenatal alcohol exposure?",
+  "diagnosis": "Diagnosis",
+  "result_info": "Information about the result",
+  "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
+  "TEAF_courses": "TEAF courses",
+  "save_patient": "Save patient",
+  "back_to_home": "Back to Home",
+  "data_loss_confirmation": "If you return to the Home page, the data entered during the diagnosis will be deleted. Are you sure you want to return to the Home page?",
+  "cancel": "Cancel",
+  "home": "Home",
+  "error": "Error",
+  "alcohol": "Alcohol",
+  "neurobehavioral": "Neurobehavioral",
+  "head_circumference_short": "Head Circumference",
+  "diagnosis_not_available": "Diagnosis not available",
+  "months": "Months",
+  "please": "Please, fill in all fields",
+  "details": "Details",
+  "delete": "Delete",
+  "error_details": "No details found for the patient",
+  "SAF": "FAS",
+  "pFAS": "pFAS",
+  "NOTEAF": "NO FASD",
+  "ARND": "ARND",
+  "higher": "Please enter a value greater than 24 months",
+  "name": "Name",
+  "sure": "Are you sure you want to delete the patient?",
+  "pdf_done": "Diagnosis performed by Visual TEAF",
+  "pdf_header": "PATIENT DIAGNOSIS",
+  "incomplete": "Incomplete",
+  "explanation": "Orange = index of FASD",
+  "introduce": "Enter a name",
+  "na": "N/A",
+  "guide": "User Guide",
+  "instructions": "User guide:\n1. Some links to explanatory texts or videos are included: diagnostic scheme for FASD by Hoyme and “?” symbols next to some sections.\n2. The values of physical measurements do not allow decimals.\n3. The page displaying images of the lip and philtrum includes a link.\n4. On the “Diagnosis” page:\n\ta. The “Edit” button redirects to the beginning of the ongoing evaluation to review the entered data.\n\tb. The “Summary” button displays all the recorded data.\n\tc. The “Home” button redirects to initiate a new evaluation.\n5. On the “Summary” page:\n\ta. The button with a floppy disk saves the patient (anonymously).\n\tb. The button with an arrow sends the summary table via email.\n\tc. The button with a trash bin deletes the entered data and returns to the app's main page.",
+  "question0": "Have you been in a foster family where your native language was spoken?",
+  "notEvaluableTitle": "Not evaluable",
+  "notEvaluableMessage": "This user is no evaluable"
+    }
       
