--- a/i18n/es.json
+++ b/i18n/es.json
@@ -39,7 +39,7 @@
     "2": "≥ 2",
     "alcohol_consume": "Consumo de alcohol en el embarazo",
     "ethnicity": "Etnia",
-	"caucasian": "Caucásico",
+    "caucasian": "Caucásico",
     "african": "Afroamericano",
     "gender": "Género",
     "male": "Hombre",
@@ -97,7 +97,7 @@
     "pdf_done": "Diagnóstico realizado por Visual TEAF",
     "pdf_header": "DIAGNÓSTICO DEL PACIENTE",
     "incomplete": "Incompleto",
-    "explanation": "Naranja = indicio de TEAF",
+    "explanation": "Naranja = indicador de TEAF",
     "introduce": "Introduce un nombre",
     "na": "N/A",
     "guide": "Guía del usuario",
